--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>  
-  <script type="text/javascript" src="./build/app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </html>
